<resources>
    <string name="app_name">FakeApplication-Snapchat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Mapa</string>
    <string name="chat">Chat</string>
    <string name="camera">Escanear</string>
    <string name="stories">Historias</string>
    <string name="discover">Spotlight</string>
    <string name="title_activity_mensaje">MensajeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="test_story_url_1">https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8</string>
    <string name="test_story_url_2">https://mnmedias.api.telequebec.tv/m3u8/29880.m3u8</string>
    <string name="test_story_url_3">https://res.cloudinary.com/mydatacloud/video/upload/v1592677620/stories/Sample_WebM_Ogg_and_MP4_Video_Files_for_HTML5_-_TechSlides_xxygbh.m3u8</string>
    <string name="test_story_url_4">https://res.cloudinary.com/mydatacloud/video/upload/v1592677622/stories/Sample_Videos___Dummy_Videos_For_Demo_Use_x4vqdv.m3u8</string>

    <string name="test_story_description">This is a test video #Covid19 #corona #demo #content</string>
    <string name="test_user_pic_url"><![CDATA[https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=albert-dera-ILip77SbmOE-unsplash.jpg&w=640]]></string>
    <string name="share">Share</string>
</resources>