<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_explorar"
        android:title="@string/map"
        />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        />

    <item
        android:id="@+id/cameraFragment"
        android:icon="@drawable/ic_scan"
        android:title="@string/camera"
        />

    <item
        android:id="@+id/storiesFragment"
        android:icon="@drawable/ic_stories"
        android:title="@string/stories"
        />

    <item
        android:id="@+id/discoverFragment"
        android:icon="@drawable/ic_spotlight"
        android:title="@string/discover"
        />
</menu>